<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APIEAndroid</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_micro">微头条</string>
    <string name="tab_me">我的</string>
    <string name="tab_category">分类</string>
    <string name="tab_cart">购物车</string>

    <string name="apie_common_style_dialog_no_hint_txt">下次不再提示</string>

    <string name="easy_glide_save_succss">保存图片成功</string>
    <string name="easy_glide_save_failed">保存失败</string>

    <string name="login_phone_zone_code">手机区号：</string>
    <string name="login_phone_code_prefix">+%1$s</string>
    <string name="login_top_bar_skip_tip">跳过</string>
    <string name="login_phone_prefix">+86</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_input_sms_code_hint">请输入验证码</string>
    <string name="login_get_sms_code">获取验证码</string>
    <string name="login_reget_sms_code">重新获取(%1$dS)</string>
    <string name="apie_loading_msg">加载中...</string>

    <string name="apie_login_main_title">登录后，体验完整功能</string>
    <string name="apie_login_sms_sub_title">未注册手机号通过验证将自动注册</string>
    <string name="apie_login_password_sub_title">密码登录仅限于已注册用户</string>
    <string name="apie_login_switch_password_tip">密码登录</string>
    <string name="apie_login_switch_sms_code_tip">验证码登录</string>
    <string name="apie_login_forget_password_tip">忘记密码？</string>
    <string name="apie_login_change_password_tip">更改密码？</string>
    <string name="apie_login_change_password_old_tip">请输入原始密码</string>
    <string name="apie_login_change_password_new_tip">请输入新密码</string>
    <string name="apie_login_cannot_accept_sms_tip">收不到验证码</string>
    <string name="apie_login_cannot_accept_sms_tip_msg">\t\t短信可能会延迟，若等待一段时间后仍然无法收到短信验证码，你可以通过以下方式检查：\n\t1.检查您的手机是否停机/无网络；\n\t2.检查您的手机号是否输入正确，是否为空号；\n\t3.检查您的验证码短信是否被屏蔽；</string>
    <string name="apie_plan_item_schedule_tip">进度:</string>

    <string name="apie_top_filter_resect_btn_text">重置</string>
    <string name="apie_top_filter_close_btn_text">收起</string>
    <string name="apie_top_filter_status_title_text">计划状态</string>
    <string name="apie_top_filter_status_no_start_plan_title">未开始</string>
    <string name="apie_top_filter_status_done_plan_title">已完成</string>
    <string name="apie_top_filter_status_doing_plan_title">进行中</string>
    <string name="apie_top_filter_status_give_up_plan_title">已放弃</string>

    <string name="apie_top_filter_type_title_text">计划类型</string>
    <string name="apie_top_filter_type_all_plan_title">全部计划</string>
    <string name="apie_top_filter_type_single_plan_title">单次计划</string>
    <string name="apie_top_filter_type_today_plan_title">每日计划</string>
    <string name="apie_top_filter_type_week_plan_title">每周计划</string>
    <string name="apie_top_filter_type_month_plan_title">每月计划</string>
    <string name="apie_top_filter_type_year_plan_title">每年计划</string>

    <string name="apie_create_plan_title">创建计划</string>
    <string name="apie_create_plan_reedit_title">编辑计划</string>
    <string name="apie_create_plan_submit_btn_tip">确认创建</string>
    <string name="apie_create_plan_cancel_btn_tip">取消创建</string>
    <string name="apie_create_plan_reedit_submit_btn_tip">保存修改</string>
    <string name="apie_create_plan_reedit_cancel_btn_tip">放弃修改</string>
    <string name="apie_create_plan_name_hint">在这里填写计划名称（限20字数）</string>
    <string name="apie_create_plan_frequency_tip">计划频次:</string>
    <string name="apie_create_plan_frequency_one_tip">完成</string>
    <string name="apie_create_plan_frequency_count_tip">次</string>
    <string name="apie_create_plan_group_tip">计划分组:</string>
    <string name="apie_create_plan_add_new_group_tip">创建分组</string>
    <string name="apie_create_plan_load_group_error_msg">加载失败，请重试</string>
    <string name="apie_create_plan_award_tip">设定一个奖励:</string>
    <string name="apie_create_plan_validity_time_tip">计划周期:</string>
    <string name="apie_create_plan_deduct_desc_tip">选填，默认未完成任务不扣除派币</string>

    <string name="apie_plan_item_reset_count_tip">撤销打卡将会回收获得的金币，是否要撤销一条打卡记录？</string>
    <string name="apie_plan_item_delete_tip">计划删除后，获得的金币也会删除，是否要删除这个计划？</string>
    <string name="apie_setting_group_manager_item_delete_tip">删除分组后，原先分组下的计划会划分到默认分组，且该分组不可恢复，是否要删除这个分组？</string>

    <string name="apie_create_plan_group_title">创建计划分组</string>
    <string name="apie_create_plan_group_name_hint">填写分组名称（限5字数）</string>

    <string name="apie_apie_exchange_desire_tip">心愿兑换将扣除账户金币，是否兑换？</string>
    <string name="apie_apie_clean_app_cache_tip">删除应用缓存会清空登录状态，是否清空？</string>
    <string name="apie_apie_login_out_app_tip">确定退出登录？</string>

    <string name="apie_create_desire_group_title">创建心愿分组</string>
    <string name="apie_create_desire_title">创建心愿</string>
    <string name="apie_create_desire_reedit_title">编辑心愿</string>
    <string name="apie_create_desire_name_hint">在这里填写心愿名称（限20字数）</string>
    <string name="apie_create_desire_frequency_tip">心愿频次:</string>
    <string name="apie_create_desire_group_tip">心愿分组:</string>
    <string name="apie_create_desire_price_title">心愿价格:</string>
    <string name="apie_create_desire_validity_time_tip">心愿兑换周期:</string>
    <string name="apie_create_desire_desc_tip">心愿描述（选填）:</string>

    <string name="apie_create_thing_group_title">创建物品分组</string>
    <string name="apie_create_thing_title">创建我的物品</string>
    <string name="apie_create_thing_reedit_title">编辑我的物品</string>
    <string name="apie_create_thing_name_hint">在这里填写物品名称（限20字数）</string>
    <string name="apie_create_thing_status_title">物品状态:</string>
    <string name="apie_create_thing_group_tip">物品分组:</string>
    <string name="apie_create_thing_buy_time_tip">入手时间:</string>
    <string name="apie_create_thing_warranty_time_tip">保修期至:</string>
    <string name="apie_create_thing_desc_tip">物品描述（选填）:</string>
    <string name="apie_create_thing_price_tip">物品价格:</string>

    <string name="apie_create_thing_appendix_tip">附加图片:</string>

    <string name="apie_group_manager_title">分组管理</string>


</resources>