<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/apie_filter_plan_root_view_bg">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/apie_theme_dimension_16"
            android:layout_marginTop="@dimen/apie_theme_dimension_8"
            android:layout_marginEnd="@dimen/apie_theme_dimension_16"
            android:background="@color/apieTheme_colorGray25"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/filterGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/apie_theme_dimension_16"
                android:layout_marginTop="@dimen/apie_theme_dimension_20"
                android:text="@string/apie_top_filter_status_title_text"
                android:textColor="@color/apieTheme_colorBlack"
                android:textSize="@dimen/apie_theme_text_14"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/apie_theme_dimension_16"
                android:layout_marginTop="@dimen/apie_theme_dimension_10"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notStartPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_status_no_start_plan_title"
                    tools:textColor="@color/apie_color_4770DC"
                    tools:background="@drawable/apie_filter_plan_selected_bg"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/donePlan"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/donePlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_status_done_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/doingPlan"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/allPlan"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/doingPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_status_doing_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/donePlan"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/giveUpPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_status_give_up_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/donePlan"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/filterPlanTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/apie_theme_dimension_16"
                android:layout_marginTop="@dimen/apie_theme_dimension_18"
                android:text="@string/apie_top_filter_type_title_text"
                android:textColor="@color/apieTheme_colorBlack"
                android:textSize="@dimen/apie_theme_text_14"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/apie_theme_dimension_16"
                android:layout_marginTop="@dimen/apie_theme_dimension_10"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/allPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_type_all_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/todayPlan"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/singlePlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_type_single_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/todayPlan"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/todayPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_type_today_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/weekPlan"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/singlePlan"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/apie_theme_dimension_16"
                android:layout_marginTop="@dimen/apie_theme_dimension_12"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weekPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_type_week_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/monthPlan"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/todayPlan"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/monthPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_type_month_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/weekPlan"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/yearPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/apie_theme_dimension_12"
                    android:background="@drawable/apie_filter_plan_normal_bg"
                    android:paddingStart="@dimen/apie_theme_dimension_6"
                    android:paddingTop="@dimen/apie_theme_dimension_8"
                    android:paddingEnd="@dimen/apie_theme_dimension_6"
                    android:paddingBottom="@dimen/apie_theme_dimension_8"
                    android:text="@string/apie_top_filter_type_year_plan_title"
                    android:textColor="@color/apieTheme_colorBlack"
                    android:textSize="@dimen/apie_theme_text_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/weekPlan"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/apie_theme_dimension_16"
                android:layout_marginTop="@dimen/apie_theme_dimension_16"
                android:layout_marginEnd="@dimen/apie_theme_dimension_16"
                android:background="@color/apieTheme_colorGray25"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/apie_theme_dimension_40"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/apie_theme_dimension_4">

                <LinearLayout
                    android:id="@+id/resetBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/resetIcon"
                        android:layout_width="@dimen/apie_theme_dimension_18"
                        android:layout_height="@dimen/apie_theme_dimension_18"
                        android:background="@drawable/apie_top_filter_reset_icon" />

                    <TextView
                        android:id="@+id/resetText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/apie_theme_dimension_5"
                        android:gravity="center"
                        android:text="@string/apie_top_filter_resect_btn_text"
                        android:textColor="@color/apieTheme_colorBlack"
                        android:textSize="@dimen/apie_theme_text_13" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/closeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/closeIcon"
                        android:layout_width="@dimen/apie_theme_dimension_18"
                        android:layout_height="@dimen/apie_theme_dimension_18"
                        android:background="@drawable/apie_top_filter_close_icon" />

                    <TextView
                        android:id="@+id/closeText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/apie_theme_dimension_5"
                        android:gravity="center"
                        android:text="@string/apie_top_filter_close_btn_text"
                        android:textColor="@color/apieTheme_colorBlack"
                        android:textSize="@dimen/apie_theme_text_13" />

                </LinearLayout>


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="196dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>